# praktica2

./: task2_f.c
Practica1/lab1/: CMakeLists.txt  func.h  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
Practica2/: Header.h  Practica2.sln  Practica2.vcxproj  Practica2.vcxproj.filters  main.c  task1_ar.c  task2_f.c
Practica2/Debug/: Practica2.ilk  vc142.idb
Practica2/Debug/Practica2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Practica2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Practica3/: Practica3.sln  Practica3.vcxproj  Practica3.vcxproj.filters  findFirstElement.c  findFirstNegativeElement.c  func.c  head.h  main.c  print.c  summ.c  summ2.c
Practica3/Debug/: Practica3.ilk  vc142.idb
Practica3/Debug/Practica3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Practica3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Practica4/: Header.h  Practica4.sln  Practica4.vcxproj  Practica4.vcxproj.filters  func.c  main.c  readArray.c  sort.c  sortStackArray.c  writeArray.c
Practica4/Debug/: Practica4.ilk  vc142.idb
Practica4/Debug/Practica4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Practica4.lastbuildstate  link.read.1.tlog  (+2 more)
Practica5/: Header.h  Practica5.sln  Practica5.vcxproj  Practica5.vcxproj.filters  delete.c  find.c  insert.c  main.c  strcat.c  strcpy.c  strlen.c
Practica5/Debug/: Practica5.ilk  vc142.idb
Practica6/lab6/: CMakeLists.txt  lb6.c
Practica7/lab7/: CMakeLists.txt  lb7.c
(+7 files in other folders)
